[project]
name = "transcend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.1.0",
    "sqlalchemy>=2.0.38",
    "wordcloud>=1.9.4",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "isort>=6.0.0",
    "mypy>=1.15.0",
    "nbformat>=5.10.4",
    "ruff>=0.9.6",
]

[[tool.mypy.overrides]]
module = ["wordcloud.*"]
follow_untyped_imports = true
